<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyt_no_connection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/img_no_internet_satellite"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/woops"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
        android:textColor="@color/darkblue"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/content"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:gravity="center_horizontal"
        android:text="@string/no_internet_conten"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/darkblue" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRetry"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:background="@drawable/btn_rounded_primary"
        android:backgroundTint="@color/darkblue"
        android:text="@string/retry"
        android:textColor="@android:color/white" />

</LinearLayout>