<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/pading_small">

        <ImageView
            android:id="@+id/ivPhoto"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:transitionName="@string/imageTransition"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/spacing_normal"
            android:fontFamily="@font/roboto_black"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="@dimen/sp_16sp"
            android:transitionName="@string/titleTransition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivPhoto"
            app:layout_constraintTop_toTopOf="@id/ivPhoto"
            tools:text="@tools:sample/full_names" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_normal"
            android:layout_marginRight="@dimen/spacing_normal"
            android:fontFamily="@font/roboto_light"
            android:singleLine="true"
            android:transitionName="@string/locationTransition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivPhoto"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            tools:text="@tools:sample/lorem" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>